--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,6 @@
   --background-end-rgb: 252, 245, 235;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   font-family: antonia-variable, sans-serif;
   font-style: normal;
@@ -72,20 +66,20 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 4px;
   height: 5px
 }
 
 ::-webkit-scrollbar-track {
   --bg-opacity: 1;
-  background-color: #f7fafc;
+  background-color: #242424!important;
   background-color: rgba(247, 250, 252, var(--bg-opacity));
 }
 
 ::-webkit-scrollbar-thumb {
   --bg-opacity: 1;
   background-color: #edf2f7;
-  background-color: rgba(27, 0, 136, var(--bg-opacity));
+  background-color: rgb(189, 24, 24);
 }
 
 ::-webkit-scrollbar-thumb {
